refactor(task): 重构任务服务——注释风格统一
- 枚举/实体 /VO/DTO: 长 Javadoc → 一行
- AdditionalScanConfig/AsyncConfig: 精简注释
- TaskServiceImpl: 12处 // 改 /* */ 分区注释
- DefaultTaskItemPreChecker: Javadoc 精简 + 5处 // 改 /*
- TaskProgressScheduler/TaskApplication: 精简 Javadoc + // 改 /*
- TaskItemPreChecker/TaskItemServiceImpl/TaskSplitService: 精简 Javadoc
- TaskVO/PageTaskVO: 补类级 Javadoc